# lilball

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release-win32.yml
crates/fidget-sim/: Cargo.toml
crates/fidget-sim/src/: ball.rs  bounds.rs  collisions.rs  interaction.rs  lib.rs  marbles.rs  particles.rs  spring.rs  trail.rs  world.rs
crates/fidget-sim/tests/: simulation.rs
crates/fidget-vk/: Cargo.toml  build.rs
crates/fidget-vk/src/: app.rs  config.rs  main.rs  renderer.rs
crates/fidget-vk/src/app/: core.rs  win32_shell.rs  winit_shell.rs
shaders/: ball_mesh.frag  ball_mesh.vert  blob.frag  blob.vert  marble_mesh.frag  marble_mesh.vert  rubber_mesh.frag  rubber_mesh.vert
tools/: build-windows.sh  capture-marbles-screenshots.sh  run-linux.sh
