[workspace]
resolver = "2"
members = ["crates/fidget-sim", "crates/fidget-vk"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Fidget-VK contributors"]
repository = "https://github.com/fidget-vk/fidget-vk"

[workspace.dependencies]
glam = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
anyhow = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
